kubernetes/base/ingress/main-ingress.yaml
# main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulletin-ingress
  namespace: bulletinboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/websocket-services: "client-service"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /actuator/health
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 5173
